// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectDebugFiles renders 1`] = `
<ProjectDebugSymbols
  location={
    Object {
      "query": Object {},
    }
  }
  params={
    Object {
      "orgId": "org",
      "projectId": "project",
    }
  }
>
  <SettingsPageHeading
    noTitleStyles={false}
    title="Debug Information Files"
  >
    <Wrapper>
      <div
        className="css-1r5ylk7-Wrapper e1ievzxl2"
      >
        <Flex
          align="center"
        >
          <Base
            align="center"
            className="css-5ipae5"
          >
            <div
              className="css-5ipae5"
              is={null}
            >
              <Title
                styled={false}
              >
                <Base
                  className="css-1ky52ze-Title e1ievzxl0"
                >
                  <div
                    className="css-1ky52ze-Title e1ievzxl0"
                    is={null}
                  >
                    <HeaderTitle>
                      <h4
                        className="css-1w8ttcn-HeaderTitle elc10ae2"
                      >
                        Debug Information Files
                      </h4>
                    </HeaderTitle>
                  </div>
                </Base>
              </Title>
            </div>
          </Base>
        </Flex>
      </div>
    </Wrapper>
  </SettingsPageHeading>
  <TextBlock>
    <Component
      className="css-1geyb25-TextBlock e12j2fov0"
    >
      <div
        className="css-1geyb25-TextBlock e12j2fov0"
      >
        
            Debug information files are used to convert addresses and minified
            function names from native crash reports into function names and
            locations.
          
      </div>
    </Component>
  </TextBlock>
  <TextBlock>
    <Component
      className="css-1geyb25-TextBlock ec8ep340"
    >
      <div
        className="css-1geyb25-TextBlock ec8ep340"
      >
        This list contains all uploaded debug information files:
      </div>
    </Component>
  </TextBlock>
  <Panel>
    <Component
<<<<<<< HEAD
      className="css-10qfvek-Panel e119nu470"
    >
      <div
        className="css-10qfvek-Panel e119nu470"
=======
<<<<<<< HEAD
      className="css-10qfvek-Panel e1laxa7d0"
    >
      <div
        className="css-10qfvek-Panel e1laxa7d0"
=======
      className="css-yahxlu-Panel e16u4s2c0"
    >
      <div
        className="css-yahxlu-Panel e16u4s2c0"
>>>>>>> build(travis): yarn --pnp [WIP]
>>>>>>> build(travis): yarn --pnp [WIP]
      >
        <PanelHeader
          hasButtons={true}
        >
          <Component
<<<<<<< HEAD
            className="css-1m2bast-PanelHeader-getPadding e1p8v8nv0"
=======
            className="css-jmvceg-PanelHeader-getPadding e1o9kety0"
>>>>>>> build(travis): yarn --pnp [WIP]
            hasButtons={true}
          >
            <Flex
              align="center"
<<<<<<< HEAD
              className="css-1m2bast-PanelHeader-getPadding e1p8v8nv0"
=======
              className="css-jmvceg-PanelHeader-getPadding e1o9kety0"
>>>>>>> build(travis): yarn --pnp [WIP]
              justify="space-between"
            >
              <Base
                align="center"
<<<<<<< HEAD
                className="e1p8v8nv0 css-yowjp-PanelHeader-getPadding"
                justify="space-between"
              >
                <div
                  className="e1p8v8nv0 css-yowjp-PanelHeader-getPadding"
=======
                className="e1o9kety0 css-19i62qd-PanelHeader-getPadding"
                justify="space-between"
              >
                <div
                  className="e1o9kety0 css-19i62qd-PanelHeader-getPadding"
>>>>>>> build(travis): yarn --pnp [WIP]
                  is={null}
                >
                  <Box
                    w={0.375}
                  >
                    <Base
                      className="css-cxbzjr"
                      w={0.375}
                    >
                      <div
                        className="css-cxbzjr"
                        is={null}
                      >
                        Debug ID
                      </div>
                    </Base>
                  </Box>
                  <Box
                    flex="1"
                  >
                    <Base
                      className="css-vti0ei"
                      flex="1"
                    >
                      <div
                        className="css-vti0ei"
                        is={null}
                      >
                        Name
                      </div>
                    </Base>
                  </Box>
                  <Box>
                    <Base
                      className="css-roynbj"
                    >
                      <div
                        className="css-roynbj"
                        is={null}
                      >
                        <withRouter(AsyncComponentSearchInput)
                          api={
                            Client {
                              "_chain": [Function],
                              "_wrapRequest": [Function],
                              "bulkUpdate": [Function],
                              "handleRequestError": [Function],
                              "hasProjectBeenRenamed": [Function],
                            }
                          }
                          className="search"
                          onError={[Function]}
                          onSuccess={[Function]}
                          placeholder="Search DIFs"
                          stateKey="project"
                          updateRoute={true}
                          url="/projects/org/project/"
                        >
                          <AsyncComponentSearchInput
                            api={
                              Client {
                                "_chain": [Function],
                                "_wrapRequest": [Function],
                                "bulkUpdate": [Function],
                                "handleRequestError": [Function],
                                "hasProjectBeenRenamed": [Function],
                              }
                            }
                            className="search"
                            debounceWait={200}
                            location={
                              Object {
                                "query": Object {},
                              }
                            }
                            onError={[Function]}
                            onSuccess={[Function]}
                            placeholder="Search DIFs"
                            router={
                              Object {
                                "createHref": [MockFunction],
                                "go": [MockFunction],
                                "goBack": [MockFunction],
                                "goForward": [MockFunction],
                                "isActive": [MockFunction],
                                "listen": [MockFunction],
                                "location": Object {
                                  "query": Object {},
                                },
                                "push": [MockFunction],
                                "replace": [MockFunction],
                                "setRouteLeaveHook": [MockFunction],
                              }
                            }
                            stateKey="project"
                            updateRoute={true}
                            url="/projects/org/project/"
                          >
                            <Form
                              onSubmit={[Function]}
                            >
                              <form
                                className="css-vfrmj7-Form eohhsvj1"
                                onSubmit={[Function]}
                              >
                                <Input
                                  className="search"
                                  onChange={[Function]}
                                  placeholder="Search DIFs"
                                  value=""
                                >
                                  <input
<<<<<<< HEAD
                                    className="search css-1b7nva7-Input-inputStyles e1xej46s0"
=======
<<<<<<< HEAD
                                    className="search css-13yodx8-Input-inputStyles e1xej46s0"
=======
                                    className="search css-pzg7em-Input-inputStyles e1ebb8kf0"
>>>>>>> build(travis): yarn --pnp [WIP]
>>>>>>> build(travis): yarn --pnp [WIP]
                                    onChange={[Function]}
                                    placeholder="Search DIFs"
                                    value=""
                                  />
                                </Input>
                              </form>
                            </Form>
                          </AsyncComponentSearchInput>
                        </withRouter(AsyncComponentSearchInput)>
                      </div>
                    </Base>
                  </Box>
                </div>
              </Base>
            </Flex>
          </Component>
        </PanelHeader>
        <PanelBody
          direction="column"
          disablePadding={true}
          flex={false}
        >
          <div
            className="css-a4ya23-textStyles"
          >
            <EmptyStateWarning
              small={false}
            >
              <EmptyStreamWrapper
                data-test-id="empty-state"
              >
                <div
<<<<<<< HEAD
                  className="css-pdv4gl-EmptyStreamWrapper ernlsnc0"
=======
                  className="css-zsnx2m-EmptyStreamWrapper er00ms90"
>>>>>>> build(travis): yarn --pnp [WIP]
                  data-test-id="empty-state"
                >
                  <HeroIcon
                    size="54"
                    src="icon-circle-exclamation"
                  >
                    <Component
                      className="css-1j03cl-HeroIcon e723dkq0"
                      size="54"
                      src="icon-circle-exclamation"
                    >
                      <InlineSvg
                        className="css-1j03cl-HeroIcon e723dkq0"
                        size="54"
                        src="icon-circle-exclamation"
                      >
<<<<<<< HEAD
                        <ForwardRef
                          className="e1h7wyrq0 css-16jcd98-InlineSvg-HeroIcon enyz4ql0"
                          size="54"
                          src="icon-circle-exclamation"
                        >
                          <svg
                            className="e1h7wyrq0 css-16jcd98-InlineSvg-HeroIcon enyz4ql0"
=======
                        <StyledSvg
                          className="css-1j03cl-HeroIcon e723dkq0"
                          height="54"
                          viewBox={Object {}}
                          width="54"
                        >
                          <svg
                            className="e723dkq0 css-196iyqp-StyledSvg-HeroIcon ebb48o80"
>>>>>>> build(travis): yarn --pnp [WIP]
                            height="54"
                            viewBox={Object {}}
                            width="54"
                          >
                            <use
                              href="#test"
                              xlinkHref="#test"
                            />
                          </svg>
                        </ForwardRef>
                      </InlineSvg>
                    </Component>
                  </HeroIcon>
                  <p>
                    There are no debug symbols for this project.
                  </p>
                </div>
              </EmptyStreamWrapper>
            </EmptyStateWarning>
          </div>
        </PanelBody>
      </div>
    </Component>
  </Panel>
  <Pagination
    className="css-1yt0wm7-streamCss"
    onCursor={[Function]}
  />
</ProjectDebugSymbols>
`;

exports[`ProjectDebugFiles renders empty 1`] = `
<Fragment>
  <SettingsPageHeading
    noTitleStyles={false}
    title="Debug Information Files"
  />
  <TextBlock>
    
            Debug information files are used to convert addresses and minified
            function names from native crash reports into function names and
            locations.
          
  </TextBlock>
  <TextBlock>
    This list contains all uploaded debug information files:
  </TextBlock>
  <Panel>
    <PanelHeader
      hasButtons={true}
    >
      <Box
        w={0.375}
      >
        Debug ID
      </Box>
      <Box
        flex="1"
      >
        Name
      </Box>
      <Box>
        <withRouter(AsyncComponentSearchInput)
          api={
            Client {
              "_chain": [Function],
              "_wrapRequest": [Function],
              "bulkUpdate": [Function],
              "handleRequestError": [Function],
              "hasProjectBeenRenamed": [Function],
            }
          }
          className="search"
          onError={[Function]}
          onSuccess={[Function]}
          placeholder="Search DIFs"
          stateKey="project"
          updateRoute={true}
          url="/projects/org/project/"
        />
      </Box>
    </PanelHeader>
    <PanelBody
      direction="column"
      disablePadding={true}
      flex={false}
    >
      <EmptyStateWarning
        small={false}
      >
        <p>
          There are no debug symbols for this project.
        </p>
      </EmptyStateWarning>
    </PanelBody>
  </Panel>
  <Pagination
    className="css-1yt0wm7-streamCss"
    onCursor={[Function]}
  />
</Fragment>
`;
